add static assets for server

--- a/views/myForm.ejs
+++ b/views/myForm.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= title %></title>
+  <!-- don't need to direct from public becaue that is default -->
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>Add new Message</h1>
