--- a/views/components/messageCard.ejs
+++ b/views/components/messageCard.ejs
@@ -1,5 +1,8 @@
 <div>
-  <h3><%= message.user %></h3>
+  <h3><%= message.username %></h3>
   <p><%= message.text %></p>
   <p><%= message.added %></p>
+  <form action="/delete/<%= message.id %>" method="post">
+    <button type="submit" onclick='return confirm("Are you sure you want to delete this message?")'>Delete</button>
+  </form>
 </div>
